@@ -1,0 +1,1 @@
+-d tests/inputs/ddlm_validate/dic/looped_subcategory.dic
