@@ -1,0 +1,5 @@
+Tests the way looped subcategories that can use the category key of their
+looped parent category are handled. Dictionaries used in this test case
+define the category keys using exclusively the '_category_key.name'
+attribute since the '_category.key_id' attribute was removed from
+the DDLm reference dictionary in version 4.0.0. 
