@@ -1,0 +1,10 @@
+scripts/ddlm_validate: tests/cases/ddlm_validate_091.inp data_[INVALID][1]_split_looped_subcategory_with_loop_key: NOTE, data items ['_looped_sub_category.integer_item', '_looped_sub_category.key', '_looped_sub_category.text_item'] must all appear in the same loop.
+scripts/ddlm_validate: tests/cases/ddlm_validate_091.inp data_[INVALID][2]_split_unlooped_subcategory_with_loop_key: NOTE, data items ['_looped_sub_category.integer_item', '_looped_sub_category.key', '_looped_sub_category.text_item'] must all appear in the same loop.
+scripts/ddlm_validate: tests/cases/ddlm_validate_091.inp data_[INVALID][3]_split_subcategory_with_some_unlooped_items: NOTE, data items ['_looped_sub_category.integer_item', '_looped_sub_category.key', '_looped_sub_category.text_item'] must all appear in the same loop.
+scripts/ddlm_validate: tests/cases/ddlm_validate_091.inp data_[INVALID][4]_separate_subcategory_no_loop_key: NOTE, missing category key data item -- the '_looped_sub_category.key' data item must be provided in the loop containing the ['_looped_sub_category.integer_item', '_looped_sub_category.text_item'] data items.
+scripts/ddlm_validate: tests/cases/ddlm_validate_091.inp data_[INVALID][5]_split_subcategory_no_loop_key: NOTE, data items ['_looped_sub_category.integer_item', '_looped_sub_category.text_item'] must all appear in the same loop.
+scripts/ddlm_validate: tests/cases/ddlm_validate_091.inp data_[INVALID][6]_looped_split_subcategory_unlooped_main_key: NOTE, data items ['_looped_sub_category.integer_item', '_looped_sub_category.text_item'] must all appear in the same loop.
+scripts/ddlm_validate: tests/cases/ddlm_validate_091.inp data_[INVALID][6]_looped_split_subcategory_unlooped_main_key: NOTE, missing category key data item -- the '_looped_sub_category.key' data item must be provided in the loop containing the ['_looped_sub_category.integer_item', '_looped_sub_category.text_item'] data items.
+scripts/ddlm_validate: tests/cases/ddlm_validate_091.inp data_[INVALID][7]_looped_split_subcategory_unlooped_keys: NOTE, data items ['_looped_sub_category.integer_item', '_looped_sub_category.key', '_looped_sub_category.text_item'] must all appear in the same loop.
+scripts/ddlm_validate: tests/cases/ddlm_validate_091.inp data_[INVALID][8]_joint_subsubcategory_duplicate_keys: NOTE, data item '_looped_main_category.aliased_key' acts as a loop key, but the associated data values are not unique -- value '2' appears 2 times as ['2'].
+scripts/ddlm_validate: tests/cases/ddlm_validate_091.inp data_[INVALID][8]_joint_subsubcategory_duplicate_keys: NOTE, data item '_looped_main_category.aliased_key' acts as a loop key, but the associated data values are not unique -- value '3' appears 2 times as ['3'].
