@@ -8,6 +8,9 @@ cod-tools (unreleased)
     - cif_ddlm_dic_check:
         - corrected a validation message describing category key items
           that do not belong to the given category.
+    - ddlm_validate:
+        - updated the looped subcategory recognition to also consider
+          the '_category_key.name' attribute.
     - sdf_add_cod_data:
         - updated the handling of the <PUBCHEM_SUBSTANCE_COMMENT> data item
           to not exclude fields that contain empty parentheses.
